tests/__snapshots__/validation-configFile-syntax-errors-root-brace.snap.txt
Error: Expected '{'.

  1 | [
    | ~
  2 |   {
  3 |     "failFast": true
  4 |   }

      at ./tstyche.config.json:1:1

